--- a/src/main/webapp/resources/parts/profile.html
+++ b/src/main/webapp/resources/parts/profile.html
@@ -25,4 +25,20 @@
         {{friend}}
         <button class="btn" ng-click="removeFromFriends($index)">Decline</button>
     </div>
+    <br>
+    Posts:
+    <div ng-repeat="post in posts">
+        {{post}}
+        <br/>
+        <textarea ng-model="post.text"/>
+        <br/>
+        <button class="btn" ng-click="editPost($index)">Edit</button>
+        <button class="btn" ng-click="deletePost($index)">Delete</button>
+    </div>
+
+    <br/>
+    <textarea ng-model="newPost.text"/>
+    <br/>
+    <button class="btn" ng-click="addPost()">AddPost</button>
+
 </div>
