--- a/src/main/webapp/resources/parts/edit.html
+++ b/src/main/webapp/resources/parts/edit.html
@@ -30,7 +30,7 @@
                         </label>
                     </td>
                     <td>
-                        <input type="date" id="date" class="inp user-info-inp" ng-model="user.userInfo.date"/>
+                        <input type="date" id="date" class="inp user-info-inp" ng-model="user.userInfo.birthDate"/>
                     </td>
                 </tr>
                 <tr>
