--- a/src/main/webapp/resources/parts/messages.html
+++ b/src/main/webapp/resources/parts/messages.html
@@ -1,15 +1,15 @@
 <div class="message-page">
     <h1>Your dialogs</h1>
     <div ng-repeat="dialog in dialogs" class="dialog">
-        <a ng-href="/#/messages/{{dialog.userInfo.id}}" style="text-decoration: none">
+        <a ng-href="/#/messages/{{dialog.user.userInfo.id}}" style="text-decoration: none">
             <div class="dialog-wrap">
                     <div class="profile-image message-profile-img">
-                        <img src="{{dialog.photo.photoPath}}">
+                        <img src="{{dialog.user.photo.photoPath}}">
                     </div>
                     <div class="dialog-message-block">
-                        <div class="name" >{{dialog.userInfo.firstName + ' ' + dialog.userInfo.lastName}}</div>
+                        <div class="name" >{{dialog.user.userInfo.firstName + ' ' + dialog.user.userInfo.lastName}}</div>
                         <div class="text" ng-class="{not_read: dialog.message[0].read==false}">
-                          {{dialog.message[0].text.substring(0, 50)}}
+                          {{dialog.messages[0].text.substring(0, 50)}}
                         </div>
                     </div>
             </div>
