--- a/src/main/webapp/resources/parts/people.html
+++ b/src/main/webapp/resources/parts/people.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-md-7">
                     <a href="/#/profile/{{people.user.id}}"><p class="text-info head">{{people.user.firstName}} {{people.user.lastName}}</p></a>
-                    <a href="/#/message/{{people.user.id}}"><button class="btn">Send message</button></a>
+                    <a href="/#/messages/{{people.user.id}}"><button class="btn">Send message</button></a>
                     <a href="" ng-if="!(!!people.status) && people.status != 0" ng-click="addToFriend(people);"><button class="btn">Add to friend</button></a>
                     <a href="" ng-if="people.status == 0 || people.status == -1" ng-click="cancelFriendRequest(people);"><button class="btn">Cancel request</button></a>
                 </div>
