--- a/src/main/webapp/resources/parts/profile.html
+++ b/src/main/webapp/resources/parts/profile.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-5">
             <div class="row">
-                <div class="profile-photo col-md-12">
+                <div class="profile-photo col-md-12 text-center">
                     <img src="{{profilePhoto.photoPath}}"/>
                     <div class=photo-choose" ng-if="myProfile" >
                         <input id="mainPhotoUploader" type="file" nv-file-select uploader="uploader" class="photoUploader"/>
@@ -22,10 +22,6 @@
                             </button>
                         </a>
                     </div>
-                    <div class="add-post">
-                        <textarea ng-model="newPost.text"></textarea>
-                        <button class="btn full-width" ng-click="addPost();">Add post</button>
-                    </div>
                 </div>
             </div>
             <div class="row">
@@ -34,12 +30,12 @@
                     <div ng-repeat="people in friends" class="margin-bottom">
                         <div class="row">
                             <div class="col-md-5">
-                                <a href="/#/profile/{{people.user.id}}">
+                                <a href="/#/profile/{{people.userInfo.id}}">
                                     <img class="image big-image" src="{{people.photo.photoPath}}"/>
                                 </a>
                             </div>
                             <div class="col-md-6">
-                                <a href="/#/profile/{{people.user.id}}"><p class="text-info head">{{people.userInfo.firstName}} {{people.userInfo.lastName}}</p></a>
+                                <a href="/#/profile/{{people.userInfo.id}}"><p class="text-info head">{{people.userInfo.firstName}} {{people.userInfo.lastName}}</p></a>
                             </div>
                         </div>
                     </div>
@@ -90,6 +86,10 @@
             <div class="row">
                 <div class="col-md-10">
                     <h3 class="text-info">Wall posts</h3>
+                    <div class="add-post">
+                        <textarea ng-model="newPost.text" class="full-width"></textarea>
+                        <button class="btn pull-right" ng-click="addPost();">Add post</button>
+                    </div>
                     <div ng-repeat="post in posts" class="post border-bottom margin-bottom col-md-12" >
                         <p class="post-author text-primary">
                             <span class="head"><a href="/#/profile/{{post.author.id}}">{{post.author.firstName}} {{post.author.lastName}}</a></span>
@@ -99,7 +99,7 @@
                             </span>
                         </p>
                         <p ng-show="!edit">{{post.text}}</p>
-                        <textarea class="inp" ng-model="post.text" ng-show="edit"/>
+                        <textarea class="inp full-width" ng-model="post.text" ng-show="edit"/>
                         <div ng-show="edit">
                             <i class="glyphicon glyphicon-ok hover-white hover-cursor" ng-click="editPost(post, $index);edit = false;"></i>
                             <i class="glyphicon glyphicon-remove hover-white hover-cursor" ng-click="edit = false;post.text=temp;cancelUpdatePost()"></i>
